Fix: Posters were not visible on some older TVs Thanks to @BullenMoore https://github.com/lscambo13/ElegantFin/issues/182#issuecomment-3678911997

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1319,7 +1319,7 @@ body {
 
 .layout-tv .detailImageContainer .card {
     width: 25vw !important;
-    display: grid !important;
+    display: block !important;
     position: fixed !important;
     top: 0;
     bottom: 0;
